--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
     "highlight.js": "^11.8.0",
     "quill": "^1.3.7",
     "quill-image-resize-module-react": "^3.0.0",
