--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,9 +12,13 @@ jobs:
      - name: Checkout repository
        uses: actions/checkout@v2
 
-     - name: Remove .gitignore
-       run: |
-        rm .gitignore
+     - name: set up node.js
+       uses: actions/setup-node@v2
+       with:
+        node-version: 16
+
+     - name: Install amplify cli
+       run: npm install -g @aws-amplify/cli
 
      - name: Configure AWS credentials
        uses: aws-actions/configure-aws-credentials@v1
@@ -23,41 +27,11 @@ jobs:
          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
          aws-region: us-west-2
      
-     - name: Login to AWS ECR
-       id: login-ecr
-       uses: aws-actions/amazon-ecr-login@v1
+     - name: Configure Amplify CLI
+       run: amplify configure --usage-data-off
+    
+     - name: Initialize Amplify project
+       run: amplify init --app https://github.com/BuilderSong/song-site-frontend
 
-
-     - name: Build, tag and push backend image
-       run: |
-        aws ecr get-login-password --region us-west-2 | docker login --username AWS --password-stdin 777930584266.dkr.ecr.us-west-2.amazonaws.com
-        docker build -t song-site-frontend .
-        docker tag song-site-frontend:latest 777930584266.dkr.ecr.us-west-2.amazonaws.com/song-site-frontend:latest
-        docker push 777930584266.dkr.ecr.us-west-2.amazonaws.com/song-site-frontend:latest
-
-     - name: Deploy to Lambda
-       run: |
-        aws lambda create-function \
-          --function-name song-site-frontend-lambda \
-          --package-type Image \
-          --role ${{ secrets.AWS_IAM_ROLE }} \
-          --code ImageUri=777930584266.dkr.ecr.us-west-2.amazonaws.com/song-site-frontend:latest
-
-     - name: add lambda permission
-       run: |
-        aws lambda add-permission \
-        --function-name song-site-frontend-lambda \
-        --action lambda:InvokeFunctionUrl \
-        --principal "*" \
-        --function-url-auth-type "NONE" \
-        --statement-id url
-
-     - name: Create URL endpoint
-       run: |
-        aws lambda create-function-url-config \
-        --function-name song-site-frontend-lambda \
-        --auth-type NONE
-
-     - name: Create URL endpoint
-       run: |
-        aws lambda get-function-configuration --function-name song-site-frontend-lambda
+     - name: deploy to amplify
+       run: amplify publish
