--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,22 +16,28 @@ jobs:
        uses: actions/setup-node@v2
        with:
         node-version: 16
-
-     - name: Install amplify cli
-       run: npm install -g @aws-amplify/cli
-
-     - name: Configure AWS credentials
-       uses: aws-actions/configure-aws-credentials@v1
-       with:
-         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-         aws-region: us-west-2
      
-     - name: Configure Amplify CLI
-       run: amplify configure --usage-data-off
-    
-     - name: Initialize Amplify project
-       run: amplify init --app https://github.com/BuilderSong/song-site-frontend
-
-     - name: deploy to amplify
-       run: amplify publish
+     - name: configure amplify
+       uses: ambientlight/amplify-cli-action@0.3.0
+       with:
+        amplify_command: configure
+        amplify_env: prod
+       env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION: us-west-2
+        
+     - name: install, build and test
+       run: |
+        npm install
+        npm run build
+      
+     - name: deploy
+       uses: ambientlight/amplify-cli-action@0.3.0
+       with:
+        amplify_command: publish
+        amplify_env: prod
+       env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION: us-west-2
